syntax = "proto3";

package happendb.messaging;

import "google/protobuf/any.proto";

option go_package = "github.com/happendb/happendb/proto/gen/go/messaging";

message Event {
  string id = 1;
  string aggregate_id = 2;
  string type = 3;
  google.protobuf.Any payload = 4;
}